--- a/src/main/resources/com/example/sacms/clubsView.fxml
+++ b/src/main/resources/com/example/sacms/clubsView.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
         <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -62,5 +66,12 @@
                 <Font size="20.0" />
             </font>
         </Button>
+      <TableView layoutX="27.0" layoutY="227.0" prefHeight="422.0" prefWidth="994.0">
+         <columns>
+            <TableColumn prefWidth="248.79996871948242" text="Club Name" />
+            <TableColumn prefWidth="530.4000854492188" text="Club Description" />
+            <TableColumn prefWidth="216.0" text="Status" />
+         </columns>
+      </TableView>
     </children>
 </AnchorPane>
