--- a/src/main/resources/com/example/sacms/clubCreation.fxml
+++ b/src/main/resources/com/example/sacms/clubCreation.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: 00000000;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <Label layoutX="52.0" layoutY="179.0" text="Enter club name">
          <font>
@@ -30,11 +27,6 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="Clubdesc" layoutX="52.0" layoutY="327.0" prefHeight="221.0" prefWidth="606.0" style="-fx-background-radius: 10;">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </TextField>
       <Label layoutX="52.0" layoutY="286.0" text="Enter club description">
          <font>
             <Font size="22.0" />
@@ -61,5 +53,6 @@
             <Image url="@../images/ClubCreationScreenPic.png" />
          </image>
       </ImageView>
+      <TextArea layoutX="52.0" layoutY="329.0" prefHeight="218.0" prefWidth="607.0" style="-fx-border-radius: 20;" />
    </children>
 </AnchorPane>
