--- a/src/main/resources/com/example/sacms/eventCreation.fxml
+++ b/src/main/resources/com/example/sacms/eventCreation.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <Label layoutX="28.0" layoutY="85.0" prefHeight="62.0" prefWidth="376.0" text="Schedule an Event">
          <font>
@@ -26,12 +22,12 @@
             <Font name="Noto Sans Regular" size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="eventNameEventCreationInput" layoutX="28.0" layoutY="228.0" prefHeight="43.0" prefWidth="320.0" promptText="Name">
+      <TextField fx:id="eventNameEventCreationInput" layoutX="28.0" layoutY="228.0" prefHeight="43.0" prefWidth="320.0" promptText="Name" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <TextField fx:id="eventDateEventCreationInput" layoutX="377.0" layoutY="228.0" prefHeight="43.0" prefWidth="206.0" promptText="DD/MM/YYYY">
+      <TextField fx:id="eventDateEventCreationInput" layoutX="377.0" layoutY="228.0" prefHeight="43.0" prefWidth="206.0" promptText="DD/MM/YYYY" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -41,7 +37,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="eventTimeEventCreationInput" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="249.0" promptText="Time">
+      <TextField fx:id="eventTimeEventCreationInput" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="249.0" promptText="Time" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -51,7 +47,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="clubIDEventCreationInput" layoutX="304.0" layoutY="324.0" prefHeight="43.0" prefWidth="278.0" promptText="ClubID">
+      <TextField fx:id="clubIDEventCreationInput" layoutX="304.0" layoutY="324.0" prefHeight="43.0" prefWidth="278.0" promptText="ClubID" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -66,17 +62,20 @@
             <Image url="@../images/EventCreationPic.png" />
          </image>
       </ImageView>
-      <Button layoutX="347.0" layoutY="556.0" mnemonicParsing="false" onAction="#onScheduleEventButtonTwoClicked" prefHeight="43.0" prefWidth="236.0" style="-fx-background-color: #000000;" text="SCHEDULE" textFill="WHITE">
+      <Button layoutX="347.0" layoutY="556.0" mnemonicParsing="false" onAction="#onScheduleEventButtonTwoClicked" prefHeight="43.0" prefWidth="236.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="SCHEDULE" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <TextArea fx:id="eventDescriptionEventCreationInput" layoutX="28.0" layoutY="424.0" prefHeight="97.0" prefWidth="554.0" promptText="Explain about the event/meeting or activity" />
-      <Button fx:id="homeScreenButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
+      <TextArea fx:id="eventDescriptionEventCreationInput" layoutX="28.0" layoutY="424.0" prefHeight="97.0" prefWidth="554.0" promptText="Explain about the event/meeting or activity" style="-fx-background-radius: 10;">
+         <font>
+            <Font size="20.0" />
+         </font></TextArea>
       <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/Logo.png" />
          </image>
       </ImageView>
+      <Button fx:id="homeScreenButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
    </children>
 </AnchorPane>
