--- a/src/main/resources/com/example/sacms/eventsView.fxml
+++ b/src/main/resources/com/example/sacms/eventsView.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
        <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
            <image>
@@ -63,9 +59,9 @@
             <Font name="System Bold" size="42.0" />
          </font>
       </Label>
-      <Button layoutX="627.0" layoutY="142.0" mnemonicParsing="false" onAction="#onScheduleEventButtonOneClicked" prefHeight="26.0" prefWidth="233.0" style="-fx-background-color: #000000;" text="Schedule an event" textFill="WHITE">
+      <Button layoutX="627.0" layoutY="142.0" mnemonicParsing="false" onAction="#onScheduleEventButtonOneClicked" prefHeight="26.0" prefWidth="233.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="Schedule an event" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font name="Noto Sans Bold" size="20.0" />
          </font>
       </Button>
       <TableView layoutX="27.0" layoutY="219.0" prefHeight="422.0" prefWidth="994.0">
