--- a/src/main/resources/com/example/sacms/loginScreen.fxml
+++ b/src/main/resources/com/example/sacms/loginScreen.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-radius: 0;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-radius: 0;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
       <ImageView blendMode="SRC_ATOP" fitHeight="680.0" fitWidth="1050.0" pickOnBounds="true">
          <image>
@@ -26,11 +23,6 @@
       <AnchorPane layoutX="331.0" layoutY="77.0" prefHeight="534.0" prefWidth="413.0" style="-fx-background-color: white; -fx-background-radius: 25;">
          <children>
             <TextField fx:id="EmailLogin" layoutX="46.0" layoutY="165.0" prefHeight="44.0" prefWidth="322.0" promptText="Email" style="-fx-background-radius: 10;">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="PasswordLogin" layoutX="46.0" layoutY="274.0" prefHeight="44.0" prefWidth="322.0" promptText="Password" style="-fx-background-radius: 10;">
                <font>
                   <Font size="20.0" />
                </font>
@@ -52,14 +44,20 @@
             </Label>
             <Button layoutX="124.0" layoutY="420.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="LOG IN" textFill="WHITE">
                <font>
-                  <Font size="20.0" />
+                  <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Label layoutX="61.0" layoutY="464.0" prefHeight="65.0" prefWidth="292.0" text="Not a member? Create your account now">
+            <Label layoutX="61.0" layoutY="475.0" prefHeight="35.0" prefWidth="292.0" text="Not a member? Create your account now">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
+            <PasswordField fx:id="PasswordLogin" layoutX="48.0" layoutY="279.0" prefHeight="52.0" prefWidth="316.0" promptText="Password" style="-fx-background-radius: 10;">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </PasswordField>
+            <Button layoutX="61.0" layoutY="480.0" mnemonicParsing="false" onAction="#onSignInButtonClicked" opacity="0.0" prefHeight="25.0" prefWidth="292.0" />
          </children>
       </AnchorPane>
     </children>
