--- a/src/main/resources/com/example/sacms/reportsView.fxml
+++ b/src/main/resources/com/example/sacms/reportsView.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
         <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -64,5 +68,14 @@
                 <Font name="System Bold" size="20.0" />
             </font>
         </Button>
+        <TableView layoutX="28.0" layoutY="229.0" prefHeight="422.0" prefWidth="997.0">
+            <columns>
+                <TableColumn prefWidth="217.0" text="Club Name" />
+                <TableColumn prefWidth="186.0" text="Number of Club Members" />
+                <TableColumn prefWidth="192.0" text="Number of Club Events Held" />
+                <TableColumn prefWidth="237.0" text="Recent Event" />
+                <TableColumn prefWidth="164.0" text="Recent Event Attendance" />
+            </columns>
+        </TableView>
     </children>
 </AnchorPane>
