--- a/src/main/resources/com/example/sacms/signInOne.fxml
+++ b/src/main/resources/com/example/sacms/signInOne.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <ImageView fitHeight="58.0" fitWidth="133.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -30,12 +27,12 @@
             <Font name="Noto Sans Regular" size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="firstNameSignInOneInput" layoutX="28.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Firstname">
+      <TextField fx:id="firstNameSignInOneInput" layoutX="28.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Firstname" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <TextField fx:id="lastNameSignInOneInput" layoutX="321.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Lastname">
+      <TextField fx:id="lastNameSignInOneInput" layoutX="321.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Lastname" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -45,7 +42,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="DateSignInOneInput" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="320.0" promptText="DD/M/YYYY">
+      <TextField fx:id="DateSignInOneInput" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="320.0" promptText="DD/M/YYYY" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -55,7 +52,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="ClassSignInOneInput" layoutX="383.0" layoutY="324.0" prefHeight="43.0" prefWidth="200.0" promptText="Class">
+      <TextField fx:id="ClassSignInOneInput" layoutX="383.0" layoutY="324.0" prefHeight="43.0" prefWidth="200.0" promptText="Class" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -65,7 +62,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="EmailSignInOneInput" layoutX="28.0" layoutY="424.0" prefHeight="43.0" prefWidth="554.0" promptText="Email">
+      <TextField fx:id="EmailSignInOneInput" layoutX="28.0" layoutY="424.0" prefHeight="43.0" prefWidth="554.0" promptText="Email" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
@@ -75,21 +72,20 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <TextField fx:id="PasswordSignInOneInput" layoutX="28.0" layoutY="519.0" prefHeight="43.0" prefWidth="554.0" promptText="Password">
+      <PasswordField fx:id="PasswordSignInOneInput" layoutX="28.0" layoutY="519.0" prefHeight="43.0" prefWidth="554.0" promptText="Password" style="-fx-background-radius: 10;">
          <font>
             <Font size="20.0" />
          </font>
-      </TextField>
+      </PasswordField>
       <ImageView fitHeight="407.0" fitWidth="262.0" layoutX="677.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/SignInScreen1BG.png" />
          </image>
       </ImageView>
-      <Button layoutX="716.0" layoutY="562.0" mnemonicParsing="false" onAction="#onStudentRegisterButtonClicked" prefHeight="26.0" prefWidth="165.0" style="-fx-background-color: #000000;" text="REGISTER" textFill="WHITE">
+      <Button layoutX="716.0" layoutY="562.0" mnemonicParsing="false" onAction="#onRegisterStudentButtonClicked" prefHeight="26.0" prefWidth="165.0" style="-fx-background-radius: 10; -fx-background-color: #000000;" text="REGISTER" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <Button fx:id="homeScreenButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onDashboardScreenButtonClicked" opacity="0.0" prefHeight="58.0" prefWidth="133.0" text="Button" />
    </children>
 </AnchorPane>
