--- a/src/main/resources/com/example/sacms/signInTwo.fxml
+++ b/src/main/resources/com/example/sacms/signInTwo.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
         <ImageView fitHeight="56.0" fitWidth="123.0" layoutX="16.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -30,12 +27,12 @@
                 <Font size="22.0" />
             </font>
         </Label>
-        <TextField fx:id="firstNameSignInTwo" layoutX="28.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Firstname">
+        <TextField fx:id="firstNameSignInTwo" layoutX="28.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Firstname" style="-fx-background-radius: 10;">
             <font>
                 <Font size="20.0" />
             </font>
         </TextField>
-        <TextField fx:id="lastNameSignInTwo" layoutX="321.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Lastname">
+        <TextField fx:id="lastNameSignInTwo" layoutX="321.0" layoutY="228.0" prefHeight="26.0" prefWidth="261.0" promptText="Lastname" style="-fx-background-radius: 10;">
             <font>
                 <Font size="20.0" />
             </font>
@@ -45,7 +42,7 @@
                 <Font size="22.0" />
             </font>
         </Label>
-        <TextField fx:id="contactNumSignInTwo" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="320.0" promptText="Contact number">
+        <TextField fx:id="contactNumSignInTwo" layoutX="28.0" layoutY="324.0" prefHeight="43.0" prefWidth="320.0" promptText="Contact number" style="-fx-background-radius: 10;">
             <font>
                 <Font size="20.0" />
             </font>
@@ -55,7 +52,7 @@
                 <Font size="22.0" />
             </font>
         </Label>
-        <TextField fx:id="positionSignInTwo" layoutX="383.0" layoutY="324.0" prefHeight="43.0" prefWidth="200.0" promptText="Position">
+        <TextField fx:id="positionSignInTwo" layoutX="383.0" layoutY="324.0" prefHeight="43.0" prefWidth="200.0" promptText="Position" style="-fx-background-radius: 10;">
             <font>
                 <Font size="20.0" />
             </font>
@@ -65,7 +62,7 @@
                 <Font size="22.0" />
             </font>
         </Label>
-        <TextField fx:id="EmailSignInTwo" layoutX="28.0" layoutY="424.0" prefHeight="43.0" prefWidth="554.0" promptText="Email">
+        <TextField fx:id="EmailSignInTwo" layoutX="28.0" layoutY="424.0" prefHeight="43.0" prefWidth="554.0" promptText="Email" style="-fx-background-radius: 10;">
             <font>
                 <Font size="20.0" />
             </font>
@@ -75,17 +72,17 @@
                 <Font size="22.0" />
             </font>
         </Label>
-        <TextField fx:id="PasswordSignInTwo" layoutX="28.0" layoutY="519.0" prefHeight="43.0" prefWidth="554.0" promptText="Password">
+        <PasswordField fx:id="PasswordSignInTwo" layoutX="28.0" layoutY="519.0" prefHeight="43.0" prefWidth="554.0" promptText="Password" style="-fx-background-radius: 10;">
             <font>
                 <Font size="20.0" />
             </font>
-        </TextField>
+        </PasswordField>
         <ImageView fitHeight="407.0" fitWidth="262.0" layoutX="648.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/SignInScreen2BG.png" />
             </image>
         </ImageView>
-        <Button layoutX="696.0" layoutY="552.0" mnemonicParsing="false" onAction="#onStudentRegisterButtonClicked" prefHeight="43.0" prefWidth="178.0" style="-fx-background-color: #000000;" text="REGISTER" textFill="WHITE">
+        <Button layoutX="696.0" layoutY="552.0" mnemonicParsing="false" onAction="#onRegisterClubAdvisorButtonClicked" prefHeight="43.0" prefWidth="178.0" style="-fx-background-color: #000000; -fx-background-radius: 10;" text="REGISTER" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="20.0" />
             </font>
