--- a/src/main/resources/com/example/sacms/signInZero.fxml
+++ b/src/main/resources/com/example/sacms/signInZero.fxml
@@ -1,46 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
-      <ImageView fitHeight="680.0" fitWidth="1050.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="680.0" fitWidth="1050.0" pickOnBounds="true">
          <image>
             <Image url="@../images/SignInScreen0BG.png" />
          </image>
       </ImageView>
-      <Button layoutX="25.0" layoutY="23.0" mnemonicParsing="false" style="-fx-background-color: #000000;" text="SACMS." textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Button>
-      <AnchorPane layoutX="283.0" layoutY="62.0" prefHeight="478.0" prefWidth="495.0" style="-fx-background-color: #ffffff;">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="44.0" layoutX="39.0" layoutY="33.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="114.0" />
+      <ImageView blendMode="MULTIPLY" fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Logo.png" />
+         </image>
+      </ImageView>
+
+      <AnchorPane layoutX="298.0" layoutY="55.0" prefHeight="573.0" prefWidth="477.0" style="-fx-background-color: #ffffff; -fx-background-radius: 20;">
          <children>
-            <Text layoutX="138.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Register as..">
+            <Text layoutX="134.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Register as..">
                <font>
                   <Font name="System Bold" size="42.0" />
                </font>
             </Text>
-            <Button layoutX="42.0" layoutY="257.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="171.0" style="-fx-background-color: #F2DEB8;" text="STUDENT">
+            <Button layoutX="60.0" layoutY="287.0" mnemonicParsing="false" onAction="#onStudentSignInButtonClicked" prefHeight="67.0" prefWidth="171.0" style="-fx-background-color: #F2DEB8; -fx-background-radius: 10;" text="STUDENT">
                <font>
-                  <Font name="System Bold" size="20.0" />
+                  <Font name="Noto Sans Bold" size="20.0" />
                </font>
             </Button>
-            <Button layoutX="290.0" layoutY="257.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="171.0" style="-fx-background-color: #B5C5FF;" text="CLUB ADVISOR">
+            <Button layoutX="244.0" layoutY="287.0" mnemonicParsing="false" onAction="#onClubAdvisorSignInButtonClicked" prefHeight="67.0" prefWidth="179.0" style="-fx-background-color: #B5C5FF; -fx-background-radius: 10;" text="CLUB ADVISOR">
                <font>
-                  <Font name="System Bold" size="20.0" />
+                  <Font name="Noto Sans Bold" size="20.0" />
                </font>
             </Button>
-            <Text layoutX="149.0" layoutY="429.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already a member? Login now">
+            <Text layoutX="134.0" layoutY="524.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already a member? Login now">
                <font>
                   <Font size="16.0" />
                </font>
             </Text>
+            <Button layoutX="122.0" layoutY="505.0" mnemonicParsing="false" onAction="#onLogOutButtonClicked" opacity="0.0" prefHeight="25.0" prefWidth="238.0" text="Button" />
          </children>
       </AnchorPane>
    </children>
