--- a/src/main/resources/com/example/sacms/signInOne.fxml
+++ b/src/main/resources/com/example/sacms/signInOne.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <ImageView fitHeight="58.0" fitWidth="133.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -87,5 +91,35 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
+      <Label fx:id="errorFirstNameSignInOneInput" layoutX="28.0" layoutY="271.0" prefHeight="18.0" prefWidth="262.0" textFill="RED">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="errorLastNameSignInOneInput" layoutX="320.0" layoutY="271.0" prefHeight="18.0" prefWidth="262.0" textFill="RED">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="errorDateSignInOneInput" layoutX="28.0" layoutY="367.0" prefHeight="18.0" prefWidth="262.0" textFill="RED">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="errorClassSignInOneInput" layoutX="383.0" layoutY="367.0" prefHeight="18.0" prefWidth="262.0" textFill="RED">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="errorEmailSignInOneInput" layoutX="27.0" layoutY="467.0" prefHeight="20.0" prefWidth="387.0" textFill="RED">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="errorPasswordSignInOneInput" layoutX="28.0" layoutY="562.0" prefHeight="20.0" prefWidth="465.0" textFill="RED">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
